<?xml version="1.0"?>
<package>
  <name>squirrel_planning_system</name>
  <version>0.0.0</version>
  <description>Deliberative layer; A ROS node for a planner.  Deals with automatic problem generation, planning and dispatch discovery of information, and replanning.</description>
  <maintainer email="michael.cashmore@kcl.ac.uk">michael</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/planning_dispatch_msgs</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>squirrel_planning_dispatch_msgs</build_depend>
  <build_depend>squirrel_planning_knowledge_msgs</build_depend>
  <build_depend>squirrel_object_perception_msgs</build_depend>
  <build_depend>squirrel_manipulation_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>squirrel_planning_dispatch_msgs</run_depend>
  <run_depend>squirrel_planning_knowledge_msgs</run_depend>
  <run_depend>squirrel_object_perception_msgs</run_depend>
  <run_depend>squirrel_manipulation_msgs</run_depend>

  <export></export>
</package>
