<?xml version="1.0"?>
<package>
  <name>squirrel_recommender</name>

  <version>0.0.0</version>

  <description>Service to retrieve a recommender for missing data</description>

  <author>Senka Krivic</author>
  <maintainer email="senka.krivic@uibk.ac.at">Senka Krivic</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>squirrel_prediction_msgs</build_depend>
 
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>squirrel_prediction_msgs</run_depend>

</package>
